Dialog: set z-index to the correct value

--- a/components/dialog/theme.css
+++ b/components/dialog/theme.css
@@ -16,7 +16,7 @@
   position: fixed;
   top: 0;
   width: 100vw;
-  z-index: 6000;
+  z-index: 600;
 }
 
 .dialog {
